--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: pip install ruff isort
 
       - name: Run ruff linter
-        run: ruff .
+        run: ruff check .
 
       - name: Run isort check
         run: isort . --check-only
